
syntax = "proto3";

package ampel.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "policy.proto";

message Result {
    string status = 1;
    google.protobuf.Timestamp date = 2;
    google.protobuf.Struct output = 3;
    // repeated Output output = 3;
    PolicyRef policy = 4;
    repeated StatementRef statements = 5;
}

message PolicyRef {
    string id = 1; 
}

message StatementRef {
    string id = 1;
}

message ResultSet {
    repeated Result results = 1;
}
